AC_PREREQ([2.68])
AC_INIT([rfile], [0.1], [andy@hexten.net])
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
AC_CONFIG_SRCDIR([src/rfile.c])
AC_CONFIG_HEADERS([config.h])

AC_ARG_VAR([PROVE], [Test::Harness runner])

CFLAGS="-Wall -Werror"

# Checks for programs.
AC_PROG_CC
AC_PATH_PROG([PROVE], [prove])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
